# BGVNaiveBayesPredictor

./: CMakeLists.txt  README.md  more_examples.md
data/: climate.model.txt  climate.result.txt  climate.test.txt  divorce.model.txt  divorce.result.txt  divorce.test.txt  m_lenses  model_bcw_s0  model_iris_s0  model_lymph_s0  rice.model.txt  rice.result.txt  rice.test.bak  rice.test.txt  test_bcw  test_bcw_bak  test_iris  test_iris_only_two  test_lymph  vote.model.txt  vote.result.txt  vote.test.txt
src/: BGVNaiveBayesPrediction.h  comparator.cpp  comparator.h  hello.h  matrix.cpp  matrix.h  naiveBayes.cpp  tools.cpp  tools.h  utils.cpp  utils.h
